appId: com.rxlab.hktransport
---
- launchApp:
    clearState: true

- tapOn:
    id: chat-input-box
    delay: 100

- inputText: Bus route from Aberdeen to Causeway Bay

- tapOn:
    id: send-btn

- extendedWaitUntil:
    visible:
      id: back-btn
    timeout: 20000

- tapOn:
    id: back-btn

- extendedWaitUntil:
    visible:
      id: continue-btn
    timeout: 20000

- assertVisible:
    id: continue-btn

- tapOn:
    id: continue-btn

- tapOn:
    id: clear-btn

- assertVisible: HK Transport

- tapOn:
    id: chat-input-box
    delay: 100

- inputText: Bus route from Aberdeen to Causeway Bay

- tapOn:
    id: send-btn
